--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get: ^4.6.6
+  pie_chart: ^5.4.0
+  google_fonts: ^6.2.0
+  carousel_slider: ^4.2.1
+  flutter_svg: ^2.0.10+1
+  animated_text_kit: ^4.2.2
+  url_launcher: ^6.2.5
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
