--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,12 +37,15 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.6
   pie_chart: ^5.4.0
-  google_fonts: ^6.2.0
+  google_fonts: ^4.0.3
   carousel_slider: ^4.2.1
   flutter_svg: ^2.0.10+1
   animated_text_kit: ^4.2.2
   url_launcher: ^6.2.5
   font_awesome_flutter: ^10.7.0
+  flutter_resume_template: ^1.2.0
+  convex_bottom_bar: ^3.2.0
+  webview_flutter: ^4.7.0
 
 dev_dependencies:
   flutter_test:
